# day_69_blog_website

./: README.md  main.py  pyproject.toml  requirements.txt
instance/: blog.db
