[tool.poetry]
name = "repl_nix_blog-with-users-end"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Gravatar = "^0.5.0"
Flask-Login = "^0.6.2"
Werkzeug = "^2.2.2"
Flask-Bootstrap = "^3.3.7"
WTForms = "^3.0.1"
Flask-CKEditor = "^0.4.6"
flask-sqlalchemy = "^3.0.2"
Flask = "^2.2.2"
Flask-WTF = "^1.1.0"
SQLAlchemy = "^1.4.46"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
